--- a/public/style.css
+++ b/public/style.css
@@ -18,12 +18,12 @@ body {
  
   .navbar-container{
     width: 100%;
-    height: 10vh;
+    height: 70px;
     background-color: #2D2E32;
     color: #FFFFFF;
   }
  .logo{
-    margin:2vh 0 0 10vw ;
+    margin:20px 0 0 10% ;
     width: 130px;
     height: 30px;
     display: inline-block;
@@ -51,23 +51,27 @@ body {
   margin: 0%;
   display: flex;
   flex-wrap: wrap;
-  height: 90vh;
+  /* height: 80vh; */
   width: 100%;
   background-color: #2D2E32;
   /* background-color: #25262A */
 }
 .header-left{
   margin: 0;
-  width: 40%;
+  width: fit-content;
+  padding-right:20px;
+  height:90vh;
   margin-left: 10vw;
   padding-top: 20vh;
   display: inline-block;
+  margin-right: auto;
+  /* border:1px solid yellow; */
 
 }
 .header-btn{
   margin: 0%;
   width:fit-content;
-  height: fit-content;
+  /* height: 40%; */
   padding: 7px 15px;
   color: #2D2E32;
   background-color: #4dba87;
@@ -77,15 +81,72 @@ body {
 }
 
 .header-name{
+  margin: 0%;
   font-weight: 400;
   font-size:  50px;
-  color:#FFFFFF
+  color:#FFFFFF;
 }
+
+
+/* NOTE: I only tested this on Google Chrome.*/
+
+
+
+
+.header-left h1{
+  white-space: nowrap;
+  overflow: hidden;
+  width: 100%;
+  animation: type 4s steps(100,end) forwards;
+}
+ 
+
+
+@keyframes type {
+  0% {
+    width: 0;
+  }
+  1%, 99%{
+    border-right: 2px solid#4dba87;
+  }
+  100%{
+    border-right: none;
+    
+  }
+ 
+ 
+}
+
+.social-icons{
+  margin-top: 20px;
+  animation: fadeIn 5s;
+}
+.social-icons a{
+  margin-right:20px
+}
+
+@keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+/* 
+
+
+
+
+
 
 .main-image{
   margin: 0;
+  margin-right: 10%;
   display: inline-block;
-  width: 35%;
-  height:300px;
-  border:2px solid greenyellow
+  width: 40%;
+  height: 90vh;
+
+}
+.main-image img{
+  width:100%;
+  height: 100%;
+  
 }
