--- a/public/style.css
+++ b/public/style.css
@@ -17,10 +17,14 @@ body {
   /* navbar component */
  
   .navbar-container{
+    position: sticky; 
+    top:0; 
     width: 100%;
     height: 70px;
     background-color: #2D2E32;
     color: #FFFFFF;
+    box-shadow: 0 2px 2px #25262a88;
+    z-index: 1;
   }
  .logo{
     margin:20px 0 0 10% ;
@@ -150,8 +154,8 @@ body {
   border: 2px solid #4dba87;
   background-color: transparent;
   color:#4dba87;
-  width:200px;
-  height:70px;
+  width:150px;
+  height:50px;
   cursor: pointer;
   margin-top: 40px;
   font-size: 25px;
@@ -187,6 +191,39 @@ body {
   animation: fadeIn 5s;
   
 }
+
+.section:nth-child(2n+1){
+  width: 100%;
+  /* height: 500px; */
+  /* background-color: #2D2E32; */
+  background-color: #25262A;
+  color: #4dba87;
+  padding-left: 10vw;
+  padding-top: 20px ;
+  padding-bottom: 20px ;
+}
+.section:nth-child(2n){
+  width: 100%;
+  text-align: right;
+  height: 500px;
+  /* background-color: #2D2E32; */
+  background-color: #2D2E32;
+  color: #4dba87;
+  padding-right: 25vw;
+  padding-top: 20px ;
+  padding-bottom: 20px ;
+}
+.about{
+  margin-top: 30px;
+  width:70%;
+  /* text-align: justify; */
+  color: #FFFFFF;
+
+}
+
+
+/* media query, responsive design */
+
 
 @media screen and (max-width:760px) {
   .navbar-container ul{
@@ -226,7 +263,7 @@ body {
     white-space: nowrap;
     overflow: hidden;
     width: 100%;
-    animation: type 4s steps(100,end) forwards;
+
   }
   .header-left{
     margin: 0 auto;
@@ -241,14 +278,10 @@ body {
   
   }
 
-.main-image{
-  margin: 0;
-  margin-right: 10%;
-  display: none;
-  width: 40%;
-  height: 90vh;
+  .main-image{
+    display: none;
 
-}
+  }
   
 
 }
