--- a/public/style.css
+++ b/public/style.css
@@ -210,7 +210,7 @@ body {
   /* background-color: #2D2E32; */
   background-color: #2D2E32;
   color: #4dba87;
-  padding-right: 10vw;
+  padding-right: 25vw;
   padding-top: 20px ;
   padding-bottom: 20px ;
 }
@@ -301,6 +301,38 @@ body {
   justify-content: space-around;
 }
 
+.projects{
+  /* margin: auto; */
+  width: 80%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  
+  /* position: relative; */
+}
+.project-card{
+  color:black;
+  text-align: center;
+  margin-top: 20px;
+  width:300px;
+  height: 270px;
+  background-color: #4dba87;
+  outline: auto;
+}
+/* .coming-soon{
+color: yellow;
+position: absolute;
+top: 10px;
+left:20px
+} */
+
+.footer{
+  background-color: #4dba87;
+  width: 100%;
+  height: 500px;
+  outline: auto;
+}
 .under-construction{
   color:red
 }
