--- a/public/style.css
+++ b/public/style.css
@@ -210,7 +210,7 @@ body {
   /* background-color: #2D2E32; */
   background-color: #2D2E32;
   color: #4dba87;
-  padding-right: 25vw;
+  padding-right: 15vw;
   padding-top: 20px ;
   padding-bottom: 20px ;
 }
@@ -306,7 +306,7 @@ body {
   width: 80%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
   
   /* position: relative; */
@@ -335,4 +335,20 @@ left:20px
 }
 .under-construction{
   color:red
+}
+.services{
+  width: 90%;
+  margin-left: 10vw;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-top: 30px;
+  width:80%;
+}
+.service-card{
+  text-align: center;
+  margin-bottom: 10px;
+  width:300px;
+  height: 300px;
+  background-color: #25262A;
 }
