--- a/public/style.css
+++ b/public/style.css
@@ -206,7 +206,7 @@ body {
   width: 100%;
   text-align: right;
   float: right;
-  /* height: 500px; */
+  height: auto;
   /* background-color: #2D2E32; */
   background-color: #2D2E32;
   color: #4dba87;
@@ -285,9 +285,20 @@ body {
   }
   .about{
     width:100%;
+    height: auto;
+    padding-bottom: 20px;
+  }
+  .skills{
+    width: 100%;
+    height: auto;
+    padding-bottom: 20px;
+    outline: auto;
   }
   .skills-img-container{
     width: 100%;
+    /* height: auto; */
+    padding-bottom:20px ;
+    
   }
 
 }
@@ -318,7 +329,7 @@ body {
   width:300px;
   height: 270px;
   background-color: #4dba87;
-  outline: auto;
+  /* outline: auto; */
 }
 /* .coming-soon{
 color: yellow;
@@ -328,10 +339,17 @@ left:20px
 } */
 
 .footer{
-  background-color: #4dba87;
+
+  background-color: lightblue;
   width: 100%;
-  height: 500px;
-  outline: auto;
+  height: 100px;
+  /* outline: auto; */
+}
+.footer-content-box{
+  /* width: 200px; */
+  /* height: 30px; */
+  margin: auto;
+  padding-top: 20px;
 }
 .under-construction{
   color:red
