--- a/public/style.css
+++ b/public/style.css
@@ -18,10 +18,40 @@ a{
   color:white
 }
   /* navbar component */
+ .main-app{
+  height: 100vh;
+  width: 100%;
+  overflow-y: scroll;
+  /* border: 1px solid orange; */
+  
+ }
+/* width */
+::-webkit-scrollbar {
+  width: 7px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #4dba87; 
+  /* border-radius: 10px; */
+}
  
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #5d5f63; 
+  border-radius: 15px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #2D2E32; 
+}
+
   .navbar-container{
     position: sticky; 
+    /* position: fixed; */
     top:0; 
+    /* margin-bottom: 70px; */
     width: 100%;
     height: 70px;
     background-color: #2D2E32;
@@ -35,7 +65,7 @@ a{
     height: 30px;
     display: inline-block;
   }
-  .navbar-container ul{
+  .navbar-container > ul{
     float: right;
     margin: 20px;
     /* margin-top: 2vh; */
@@ -52,9 +82,12 @@ a{
   }
 
 
-  .navbar-container ul li{
+  .navbar-container > ul li{
     margin: 0 10px;
     display: inline-block;
+  }
+  .navbar-container ul li:hover{
+    color: #4dba87;
   }
 
   /* header container */
@@ -62,9 +95,11 @@ a{
 .header-container{
   
   margin: 0%;
+  padding-top: 10px;
+  /* box-sizing: border-box; */
   display: flex;
   flex-wrap: wrap;
-  /* height: 90vh; */
+  /* height: 100vh; */
   width: 100%;
   background-color: #2D2E32;
   /* background-image: url('https://images.unsplash.com/photo-1584949091598-c31daaaa4aa9?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80');
@@ -79,7 +114,7 @@ a{
   /* padding-right:20px; */
   /* height:90vh; */
   margin-left: 10vw;
-  padding-top: 20vh;
+  padding-top: 30vh;
   display: inline-block;
   margin-right: auto;
   /* border:1px solid yellow; */
@@ -87,7 +122,8 @@ a{
 }
 .header-btn{
   margin: 0%;
-  width:fit-content;
+  /* width:200px; */
+  width: fit-content;
   /* height: 40%; */
   padding: 7px 15px;
   color: #2D2E32;
@@ -108,7 +144,7 @@ a{
   white-space: nowrap;
   overflow: hidden;
   width: 100%;
-  animation: type 4s steps(100,end) forwards;
+  animation: type 4s steps(40,end) forwards;
 }
 
 @keyframes type {
@@ -204,11 +240,11 @@ a{
   padding-left: 10vw;
   padding-top: 20px ;
   padding-bottom: 20px ;
+  padding-top: 100px;
 }
 .section:nth-child(2n){
   width: 100%;
   text-align: right;
-  float: right;
   height: auto;
   background-color: #2D2E32;
   background-color: #2D2E32;
@@ -216,10 +252,12 @@ a{
   padding-right: 15vw;
   padding-top: 20px ;
   padding-bottom: 20px ;
+  padding-top: 100px;
+
 }
 .about{
   margin-top: 30px;
-  width:70%;
+  width:80%;
   /* text-align: justify; */
   color: #FFFFFF;
 
@@ -227,7 +265,7 @@ a{
 
 
 /* media query, responsive design */
-@media screen and (max-width: 975px) {
+@media screen and (max-width: 980px) {
   .main-image{
     display: none;
 
@@ -249,7 +287,7 @@ a{
 }
 
 @media screen and (max-width:760px) {
-  .navbar-container ul{
+  .navbar-container > ul{
     display:none;
   }
   .navbar-container .hamberger img{
@@ -271,18 +309,28 @@ a{
     top:0;
     right: 0;
     width:50%;
-    height:100vh;
+    height: 250px;
     padding-top:20px ;
     background-color: #4dba87;
     animation: fadeIn .7s;
+    /* border: 2px solid yellow */
     /* transition: all .3s ease-in-out; */
 
+  }
+  .hamberger-items-contaner ul li{
+    /* border: 2px solid orange; */
+    margin-bottom: 10px;
+    /* text-align: right; */
+    /* position: absolute; */
+    /* top:0; */
+
+    /* right: 0; */
+    display: block;
   }
 
   .section:nth-child(2n){
     
     text-align: left;
-    float: right;
     padding-right: 0;
     width: 100%;
     height: auto;
@@ -290,7 +338,7 @@ a{
     background-color: #2D2E32;
     color: #4dba87;
     padding-left: 10vw;
-    padding-top: 20px ;
+    padding-top: 100px ;
     padding-bottom: 20px ;
   }
   .header-name{
@@ -322,19 +370,20 @@ a{
   }
   .about{
     width:100%;
-    height: auto;
+    height: fit-content;
+    text-align: center;
     padding-bottom: 20px;
-    padding-right:5%;
+    padding-right: 10%;
   }
   .skills{
     width: 100%;
     height: auto;
     padding-bottom: 20px;
+    
   
   }
   .skills-img-container{
     width: 100%;
-    /* height: auto; */
     padding-bottom:20px ;
     
   }
@@ -367,6 +416,7 @@ a{
   width:300px;
   height: 270px;
   background-color: #4dba87;
+  border-radius: 7px;
   /* outline: auto; */
 }
 /* .coming-soon{
@@ -376,19 +426,52 @@ top: 10px;
 left:20px
 } */
 
-.footer{
 
-  background-color: lightblue;
-  width: 100%;
-  height: 100px;
+/* .footer-container{ */
+
+
+  /* border: 2px solid orange; */
+  /* width: 100%; */
+  /* border-top: 5px orange; */
+  /* border: 2px solid blue; */
+  /* height: 100px; */
   /* outline: auto; */
-}
+/* } */
 .footer-content-box{
-  /* width: 200px; */
+  background-color: #4dba87;
+  /* border: 2px solid orange; */
+  width: 100%;
   /* height: 30px; */
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
   margin: auto;
   padding-top: 20px;
+  padding-left: 20px;
+  padding-bottom: 20px;
+  padding-right: 20px;
 }
+
+.material-symbols-sharp {
+ 
+  font-variation-settings:
+  'FILL' 1,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48
+}
+.copyrights{
+  font-size: 20px;
+}
+/* .footer-social-icons{
+margin-top: 10px;
+} */
+.footer-social-icons a{
+  margin-right:20px;
+  margin-top:10px;
+}
+
 .under-construction{
   color:red
 }
