--- a/public/style.css
+++ b/public/style.css
@@ -264,6 +264,177 @@ a{
 }
 
 
+
+
+
+.skills-img-container{
+  margin-top: 30px;
+  width: 70%;
+  height: auto;
+  display:flex;
+  flex-wrap:wrap;
+  justify-content: space-around;
+}
+
+.projects{
+  /* margin: auto; */
+  width: 90%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  
+  /* position: relative; */
+}
+.project-card{
+  text-align: center;
+  width:365px;
+  height: auto;
+  margin-bottom: 20px;
+  color:white;
+  box-sizing: border-box;
+  border: 1px solid #4dba87;
+  margin-top: 30px;
+}
+.project-card-img{
+  margin:0 auto;
+  text-align: center;
+  margin-top: 20px;
+  width:350px;
+  height: 200px;
+  background-color: #4dba87;
+  border-radius: 7px;
+  position: relative;
+  /* transition: all .4s ease-in-out; */
+  /* outline: auto; */
+}
+.project-card-img:hover{
+  background-color: #25262A;
+}
+.project-card img{
+  width: 100%;
+  height: 100%;
+  border-radius: 7px;
+}
+
+
+
+
+.project-live-github{
+  padding-top: 10%;
+  transition: all .5s ease-in-out;
+ width: 100%;
+ height: 100%;
+ /* display: none; */
+ position: absolute;
+ top:0;
+ left:0%;
+ 
+ /* transform: translate(-50%, -50%); */
+ /* background-color: #25262A; */
+}
+.project-live-github a {
+  color: transparent;
+}
+.project-card-img:hover .project-live-github{
+  color: white;
+  border:1px solid #FFFFFF;
+  background-color: #25262A;
+  /* display: block; */
+  /* transition: all .7 ease-in-out; */
+}
+.project-card-img:hover .project-live-github a {
+  color: white;
+  transition: all .7s ease-in-out;
+}
+
+.project-live-github p{
+  margin-bottom: 50px;
+}
+.project-card-details h3{
+  margin-bottom: 10px;
+}
+/* .coming-soon{
+color: yellow;
+position: absolute;
+top: 10px;
+left:20px
+} */
+
+
+/* .footer-container{ */
+
+
+  /* border: 2px solid orange; */
+  /* width: 100%; */
+  /* border-top: 5px orange; */
+  /* border: 2px solid blue; */
+  /* height: 100px; */
+  /* outline: auto; */
+/* } */
+.footer-content-box{
+  background-color: #4dba87;
+  /* border: 2px solid orange; */
+  width: 100%;
+  /* height: 30px; */
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  margin: auto;
+  padding-top: 20px;
+  padding-left: 20px;
+  padding-bottom: 20px;
+  padding-right: 20px;
+}
+
+.material-symbols-sharp {
+ 
+  font-variation-settings:
+  'FILL' 1,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48
+}
+.copyrights{
+  font-size: 20px;
+}
+/* .footer-social-icons{
+margin-top: 10px;
+} */
+.footer-social-icons a{
+  margin-right:20px;
+  margin-top:10px;
+}
+
+.under-construction{
+  color:red
+}
+.services{
+  width: 90%;
+  margin-left: 10vw;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-top: 30px;
+  width:80%;
+}
+.service-card{
+  text-align: center;
+  margin-bottom: 10px;
+  width:300px;
+  height: 300px;
+  background-color: #25262A;
+}
+
+
+
+
+
+
+
+
+
 /* media query, responsive design */
 @media screen and (max-width: 980px) {
   .main-image{
@@ -285,6 +456,7 @@ a{
 
   
 }
+
 
 @media screen and (max-width:760px) {
   .navbar-container > ul{
@@ -387,107 +559,15 @@ a{
     padding-bottom:20px ;
     
   }
+  .projects{
+    width: 98%;
+  }
+  .project-card{
+    width: 95%;
+    border: 1px solid orange;
+  }
+  .project-card-img{
+    width: 96%;
+  }
 
-}
-
-.skills-img-container{
-  margin-top: 30px;
-  width: 70%;
-  height: auto;
-  display:flex;
-  flex-wrap:wrap;
-  justify-content: space-around;
-}
-
-.projects{
-  /* margin: auto; */
-  width: 80%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-  
-  /* position: relative; */
-}
-.project-card{
-  color:black;
-  text-align: center;
-  margin-top: 20px;
-  width:300px;
-  height: 270px;
-  background-color: #4dba87;
-  border-radius: 7px;
-  /* outline: auto; */
-}
-/* .coming-soon{
-color: yellow;
-position: absolute;
-top: 10px;
-left:20px
-} */
-
-
-/* .footer-container{ */
-
-
-  /* border: 2px solid orange; */
-  /* width: 100%; */
-  /* border-top: 5px orange; */
-  /* border: 2px solid blue; */
-  /* height: 100px; */
-  /* outline: auto; */
-/* } */
-.footer-content-box{
-  background-color: #4dba87;
-  /* border: 2px solid orange; */
-  width: 100%;
-  /* height: 30px; */
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-  margin: auto;
-  padding-top: 20px;
-  padding-left: 20px;
-  padding-bottom: 20px;
-  padding-right: 20px;
-}
-
-.material-symbols-sharp {
- 
-  font-variation-settings:
-  'FILL' 1,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 48
-}
-.copyrights{
-  font-size: 20px;
-}
-/* .footer-social-icons{
-margin-top: 10px;
-} */
-.footer-social-icons a{
-  margin-right:20px;
-  margin-top:10px;
-}
-
-.under-construction{
-  color:red
-}
-.services{
-  width: 90%;
-  margin-left: 10vw;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  margin-top: 30px;
-  width:80%;
-}
-.service-card{
-  text-align: center;
-  margin-bottom: 10px;
-  width:300px;
-  height: 300px;
-  background-color: #25262A;
 }
