project section: description of projects and links are added/corrected

--- a/public/style.css
+++ b/public/style.css
@@ -289,7 +289,7 @@ a{
 .project-card{
   text-align: center;
   width:365px;
-  height: auto;
+  height: 420px;
   margin-bottom: 20px;
   color:white;
   box-sizing: border-box;
@@ -337,19 +337,24 @@ a{
   color: transparent;
 }
 .project-card-img:hover .project-live-github{
-  color: white;
+  
   border:1px solid #FFFFFF;
   background-color: #25262A;
   /* display: block; */
   /* transition: all .7 ease-in-out; */
 }
 .project-card-img:hover .project-live-github a {
-  color: white;
+  color: #4dba87;
   transition: all .7s ease-in-out;
+}
+.project-live-github a:hover {
+  color: white;
 }
 
 .project-live-github p{
   margin-bottom: 50px;
+  font-size: 18px;
+  font-weight: bold;
 }
 .project-card-details h3{
   margin-bottom: 10px;
@@ -452,6 +457,9 @@ margin-top: 10px;
     /* margin-right: auto; */
     /* border:1px solid yellow; */
   
+  }
+  .projects{
+    justify-content: center;
   }
 
   
@@ -562,8 +570,10 @@ margin-top: 10px;
   .projects{
     width: 98%;
   }
+  
   .project-card{
     width: 95%;
+    height: auto;
     border: 1px solid orange;
   }
   .project-card-img{
