--- a/public/style.css
+++ b/public/style.css
@@ -51,7 +51,8 @@ a{
     position: sticky; 
     /* position: fixed; */
     top:0; 
-    /* margin-bottom: 70px; */
+    left:0;
+    /* padding-top: 70px; */
     width: 100%;
     height: 70px;
     background-color: #2D2E32;
@@ -293,8 +294,14 @@ a{
   margin-bottom: 20px;
   color:white;
   box-sizing: border-box;
-  border: 1px solid #4dba87;
+  border-radius: 7px;
+  /* border: 1px solid #4dba87; */
   margin-top: 30px;
+  box-shadow: #4dba87 0px 5px 15px;
+}
+.project-card:hover{
+  transform: scale(1.05);
+  transition: all .3s ease-in-out;
 }
 .project-card-img{
   margin:0 auto;
@@ -365,6 +372,9 @@ a{
   font-size: 18px;
   font-weight: bold;
 }
+.project-card-details{
+  padding: 0 3px;
+}
 .project-card-details h3{
   margin-bottom: 10px;
 }
@@ -402,14 +412,7 @@ left:20px
   padding-right: 20px;
 }
 
-.material-symbols-sharp {
- 
-  font-variation-settings:
-  'FILL' 1,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 48
-}
+
 .copyrights{
   font-size: 20px;
 }
@@ -516,17 +519,22 @@ margin-top: 10px;
     /* right: 0; */
     display: block;
   }
-
+  .section:nth-child(2n+1){
+    padding-left: 0px;
+    text-align: center;
+    width: 100%;
+  }
   .section:nth-child(2n){
-    
-    text-align: left;
+    padding-left: 0;
+    text-align: center;
+    /* text-align: left; */
     padding-right: 0;
     width: 100%;
     height: auto;
     background-color: #2D2E32;
     background-color: #2D2E32;
     color: #4dba87;
-    padding-left: 10vw;
+    /* padding-left: 10vw; */
     padding-top: 100px ;
     padding-bottom: 20px ;
   }
@@ -561,16 +569,11 @@ margin-top: 10px;
     width:100%;
     height: fit-content;
     text-align: center;
-    padding-bottom: 20px;
-    padding-right: 10%;
+    padding-bottom: 130px;
+    padding: 0 15px;
+    /* padding-right: 10%; */
   }
-  .skills{
-    width: 100%;
-    height: auto;
-    padding-bottom: 20px;
-    
-  
-  }
+
   .skills-img-container{
     width: 100%;
     padding-bottom:20px ;
@@ -581,9 +584,9 @@ margin-top: 10px;
   }
   
   .project-card{
-    width: 95%;
+    width: 90%;
     height: auto;
-    border: 1px solid orange;
+  
   }
   .project-card-img{
     width: 96%;
