navbar modified. css:smooth scroll added

--- a/public/style.css
+++ b/public/style.css
@@ -13,6 +13,9 @@ body {
   h1, h2, h3, h4, h5, h6, p {
     margin: 0;
   }
+  html {
+    
+  }
 a{
   text-decoration: none;
   color:white
@@ -22,6 +25,7 @@ a{
   height: 100vh;
   width: 100%;
   overflow-y: scroll;
+  scroll-behavior: smooth;
   /* border: 1px solid orange; */
   
  }
@@ -94,9 +98,9 @@ a{
   /* header container */
 
 .header-container{
-  
   margin: 0%;
-  padding-top: 10px;
+  padding-top: 70px;
+  height: 100vh;
   /* box-sizing: border-box; */
   display: flex;
   flex-wrap: wrap;
@@ -115,7 +119,7 @@ a{
   /* padding-right:20px; */
   /* height:90vh; */
   margin-left: 10vw;
-  padding-top: 30vh;
+  padding-top: 270px;
   display: inline-block;
   margin-right: auto;
   /* border:1px solid yellow; */
@@ -312,6 +316,7 @@ a{
   background-color: #4dba87;
   border-radius: 7px;
   position: relative;
+  margin-bottom: 50px;
   /* transition: all .4s ease-in-out; */
   /* outline: auto; */
 }
