--- a/public/style.css
+++ b/public/style.css
@@ -98,8 +98,8 @@ a{
   /* header container */
 
 .header-container{
+  padding-top: 30px;
   margin: 0%;
-  padding-top: 70px;
   height: 100vh;
   /* box-sizing: border-box; */
   display: flex;
@@ -405,11 +405,11 @@ left:20px
   background-color: #4dba87;
   /* border: 2px solid orange; */
   width: 100%;
-  /* height: 30px; */
+  height: 100px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   margin: auto;
   padding-top: 20px;
   padding-left: 20px;
@@ -545,6 +545,9 @@ margin-top: 10px;
     /* padding-left: 10vw; */
     padding-top: 100px ;
     padding-bottom: 20px ;
+  }
+  .header-container{
+    padding-top: 90px;
   }
   .header-name{
     margin: 0%;
