--- a/public/style.css
+++ b/public/style.css
@@ -13,9 +13,7 @@ body {
   h1, h2, h3, h4, h5, h6, p {
     margin: 0;
   }
-  html {
-    
-  }
+
 a{
   text-decoration: none;
   color:white
@@ -198,7 +196,7 @@ a{
   border: 2px solid #4dba87;
   background-color: transparent;
   color:#4dba87;
-  width:150px;
+  width:160px;
   height:50px;
   cursor: pointer;
   margin-top: 40px;
@@ -288,6 +286,7 @@ a{
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
+  padding-bottom: 50px ;
   
   /* position: relative; */
 }
@@ -451,7 +450,73 @@ margin-top: 10px;
 
 
 
+/* contact form */
 
+
+.contact-form-container{
+  
+  color:#4dba87;
+  width: 100%;
+  background-color: #2D2E32;
+  padding: 50px 0px;
+}
+.contact-form-container h1{
+  margin: 40px auto;
+  width:fit-content;
+
+  
+}
+.contact-form-container form{
+
+ /* min-width: 300px; */
+ /* max-width: ; */
+ margin: auto;
+  /* border:2px solid orange */
+  /* flex-wrap: wrap; */
+}
+.contact-form-container form input, button{
+  color:white;
+  padding-left: 15px;
+  background-color: transparent;
+  border: 1px solid #4dba87;
+  width:50%;
+  height: 50px;
+  /* width:50%; */
+  display: block;
+  margin: 20px auto;
+  /* margin: auto; */
+
+}
+.user-name {
+  border-radius: 12px 12px 0 0 ;
+}
+
+.contact-form-container form textarea{
+  color:white;
+  padding-left: 15px;
+  background-color: transparent;
+  border: 1px solid #4dba87;
+  width:50%;
+  /* height: 50px; */
+  /* width:50%; */
+  display: block;
+  margin: 20px auto;
+  /* margin: auto; */
+
+}
+.contact-form-container form button{
+  font-weight: bold;
+  font-size: large;
+  background-color: white;
+  color:#4dba87;
+  cursor: pointer;
+  border-radius: 0px 0px 12px 12px; 
+}
+.contact-form-container form button:hover{
+  background-color: #4dba87;
+  transition: all.3S ease-in-out;
+  
+}
 
 
 
@@ -602,5 +667,32 @@ margin-top: 10px;
   .project-card-img{
     width: 96%;
   }
+  
+  
+/* contact form */
+
+
+/* .contact-form-container{
+  
+  color:#4dba87;
+  width: 100%;
+  background-color: #2D2E32;
+  padding: 50px 0px;
+} */
+/* .contact-form-container h1{
+  margin: 40px auto;
+  width:fit-content;
+
+  
+} */
+
+.contact-form-container form input  , button{
+ 
+ width: 90%;
+}
+.contact-form-container form textarea{
+  width: 90%;;
+}
+
 
 }
