--- a/public/style.css
+++ b/public/style.css
@@ -147,10 +147,10 @@ a{
   white-space: nowrap;
   overflow: hidden;
   width: 100%;
-  animation: type 4s steps(40,end) forwards;
+  animation: typing 2.5s steps(40,end) forwards;
 }
 
-@keyframes type {
+@keyframes typing {
   0% {
     width: 0;
   }
