--- a/public/style.css
+++ b/public/style.css
@@ -117,7 +117,8 @@ a{
   /* padding-right:20px; */
   /* height:90vh; */
   margin-left: 10vw;
-  padding-top: 270px;
+  /* padding-top: 270px; */
+  margin-top: 100px;
   display: inline-block;
   margin-right: auto;
   /* border:1px solid yellow; */
@@ -223,12 +224,12 @@ a{
   margin-right: 10%;
   display: inline-block;
   width: 40%;
-  height: 90vh;
+  /* height: 50vh; */
 
 }
 .main-image img{
   width:100%;
-  height: 100%;
+  /* height: 100%; */
   opacity:.9;
   animation: fadeIn 5s;
   
@@ -259,7 +260,7 @@ a{
 
 }
 .about{
-  margin-top: 30px;
+  margin: 30px 0;
   width:80%;
   /* text-align: justify; */
   color: #FFFFFF;
@@ -295,7 +296,7 @@ a{
   width: 90%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   padding-bottom: 50px ;
   
