--- a/public/style.css
+++ b/public/style.css
@@ -64,9 +64,10 @@ a{
   }
  .logo{
     margin:20px 0 0 10% ;
-    width: 130px;
+    width: auto;
     height: 30px;
     display: inline-block;
+    /* outline: auto; */
   }
   .navbar-container > ul{
     float: right;
@@ -74,7 +75,7 @@ a{
     /* margin-top: 2vh; */
     /* margin-left: auto; */
     /* width: 400px; */
-    height: 30px;
+    /* height: 30px; */
     list-style: none;
     /* display: inline-block; */
     
