--- a/public/style.css
+++ b/public/style.css
@@ -64,10 +64,36 @@ a{
   }
  .logo{
     margin:20px 0 0 10% ;
-    width: auto;
+    width: fit-content;
     height: 30px;
+   
     display: inline-block;
     /* outline: auto; */
+  }
+ 
+  .nav-resume-btn{
+    margin-left: 8%;
+    /* border: 2px solid #4dba87; */
+    /* float: right; */
+    margin-right: auto;
+    /* margin-top: 19px; */
+    border: none;
+    border-radius: 10px;
+    background-color: transparent;
+    color:#FFFFFF;
+    width:fit-content;
+    padding: 5px 8px;
+    height: auto;
+    cursor: pointer;
+    font-weight: 600;
+    animation: fadeIn 5s;
+    transition: all .3s ease-in-out;
+  
+  }
+  .nav-resume-btn:hover{
+    transition: all .5s ease-in-out;
+    background-color: #4dba87;
+    color: #2D2E32;
   }
   .navbar-container > ul{
     float: right;
@@ -93,6 +119,14 @@ a{
   .navbar-container ul li:hover{
     color: #4dba87;
   }
+  /* .navbar-container a{
+    color: #4dba87;
+  } */
+  .navbar-container a:focus {
+    color: #4dba87;
+  }
+
+
 
   /* header container */
 
@@ -198,7 +232,8 @@ a{
   border: 2px solid #4dba87;
   background-color: transparent;
   color:#4dba87;
-  width:160px;
+  width:auto;
+  padding: 5px 7px;
   height:50px;
   cursor: pointer;
   margin-top: 40px;
@@ -581,6 +616,9 @@ margin-top: 10px;
   .main-image{
     display: none;
 
+  }
+  .nav-resume-btn{
+    display: none;
   }
   .header-left{
     /* margin: 0 auto; */
