--- a/public/style.css
+++ b/public/style.css
@@ -341,13 +341,15 @@ a{
 .project-card{
   text-align: center;
   width:365px;
-  height: 420px;
+  height: 460px;
   margin-bottom: 20px;
   color:white;
   box-sizing: border-box;
+  position: relative;
   border-radius: 7px;
   /* border: 1px solid #4dba87; */
   margin-top: 30px;
+
   box-shadow: #4dba87 0px 5px 15px;
 }
 .project-card:hover{
@@ -362,73 +364,50 @@ a{
   height: 200px;
   background-color: #4dba87;
   border-radius: 7px;
-  position: relative;
+  
   margin-bottom: 20px;
   /* transition: all .4s ease-in-out; */
   /* outline: auto; */
 }
-.project-card-img:hover{
+/* .project-card-img:hover{
   background-color: #25262A;
-}
+} */
 .project-card img{
   width: 100%;
   height: 100%;
   border-radius: 7px;
 }
 
-
-
-
-.project-live-github{
-  padding-top: 10%;
-  transition: all .5s ease-in-out;
- width: 100%;
- height: 100%;
-
- /* display: none; */
- position: absolute;
- top:0;
- left:0%;
- 
- /* transform: translate(-50%, -50%); */
- /* background-color: #25262A; */
+.project-live-github-container{
+  position: absolute;
+  bottom: 10px;
+  margin-top: 10px;
+  text-align: center;
+  left: 17%;
+  /* transform: translateX(-50%); */
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
 }
-.project-live-github a {
- 
-  color: transparent;
+.project-live-github-container a{
+  padding: 5px 7px;
+  margin: 0 5px;
+  border: 2px solid #4dba87;
 }
-.project-card-img:hover .project-live-github{
-  
-  border:1px solid #FFFFFF;
-  background-color: #25262A;
-  /* display: block; */
-  /* transition: all .7 ease-in-out; */
-}
-.project-card-img:hover .project-live-github a {
-  
-  color: #4dba87;
-  transition: all .7s ease-in-out;
-}
-.project-live-github a:hover {
-  color: white;
-}
-.project-card-img:hover .project-live-github p {
-  background-color: white;
-  color: #4dba87;
-  transition: all .7s ease-in-out;
+.project-live-github-container a:hover{
+  transition: all .4s ease-in-out;
+  background-color: #FFFFFF;
+  color:#4dba87;
 }
 
-.project-live-github p{
-  
-  margin-bottom: 50px;
-  font-size: 18px;
-  font-weight: bold;
-}
 .project-card-details{
   padding: 0 3px;
+  margin-bottom:10px ;
+  
 }
 .project-card-details h3{
-  margin-bottom: 10px;
+  margin-bottom: 7px;
 }
 /* .coming-soon{
 color: yellow;
