--- a/public/style.css
+++ b/public/style.css
@@ -378,7 +378,7 @@ a{
   border-radius: 7px;
 }
 
-.{
+.project-live-github-container{
   position: absolute;
   bottom: 10px;
   margin-top: 10px;
@@ -393,12 +393,12 @@ a{
   justify-content: space-evenly;
   align-items: center;
 }
-. a{
+.project-live-github-container a{
   padding: 5px 7px;
   margin: 0 5px;
   border: 2px solid #4dba87;
 }
-. a:hover{
+.project-live-github-container a:hover{
   transition: all .4s ease-in-out;
   background-color: #FFFFFF;
   color:#4dba87;
@@ -749,12 +749,12 @@ margin-top: 10px;
   .project-card-img{
     width: 97%;
   }
-  .{
+  /* .project-live-github-container{ */
    
     /* left: 50%;
   transform: translateX(-50%); */
     
-  }
+  /* } */
   
   
 /* contact form */
@@ -814,7 +814,7 @@ margin-top: 10px;
   .project-card-img{
     width: 95%;
   }
-  /* .{ */
+  /* .project-live-github-container{ */
    
     /* left: 10%; */
     
