--- a/public/style.css
+++ b/public/style.css
@@ -524,25 +524,18 @@ margin-top: 10px;
 
 
 .contact-form-container{
-  
+  /* border:2px solid red; */
   color:#4dba87;
   width: 100%;
   background-color: #25262A;
   padding: 50px 0px;
+  
 }
 .contact-form-container h1{
   margin: 40px auto;
   width:fit-content;
 
   
-}
-.contact-form-container form{
-
- /* min-width: 300px; */
- /* max-width: ; */
- margin: auto;
-  /* border:2px solid orange */
-  /* flex-wrap: wrap; */
 }
 .contact-form-container form input,.contact-form-container form button{
   color:white;
@@ -621,7 +614,7 @@ margin-top: 10px;
     display: block;
     text-align: center;
   }
-  
+ 
 }
 
 
@@ -820,4 +813,10 @@ margin-top: 10px;
     
   /* } */
   
+}
+@media screen and (min-width: 795px) {
+  .contact-form-container form{
+    margin-left: -15vw;
+  
+  }
 }
